--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+html {
+  color-scheme: dark !important;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -6,11 +10,12 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  color: #e4e3e8;
   /* background-color: #f4f4f4; */
   background: radial-gradient(circle, #8e44ad, #2c3e50);
 }
 .container {
-  background: #fff;
+  background-color: rgb(19, 21, 22);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0px 30px 10px rgba(0, 0, 0, 0.3);
@@ -22,12 +27,15 @@ textarea {
   height: 100px;
   padding: 10px;
   border: 1px solid #ccc;
-  background: #efefef;
+  background: #212425;
   border-radius: 4px;
   margin-bottom: 10px;
-  color: #333;
   font-weight: 600;
   font-size: 12px;
+  border-color: rgb(62, 68, 70);
+  background-color: rgb(33, 36, 37);
+  background-image: none;
+  color: rgb(200, 195, 188);
 }
 button {
   padding: 10px 20px;
